--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier '**/*.{js,css,md}' --write"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -22,6 +23,7 @@
     "@types/react": "17.0.29",
     "eslint": "8.0.0",
     "eslint-config-next": "11.1.2",
+    "prettier": "^2.4.1",
     "typescript": "4.4.3"
   }
 }
