Add ESlint and ci

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier '**/*.{js,ts,tsx,css,md}' --write"
+    "prettier": "prettier '**/*.{js,ts,tsx,css,md}' --write",
+    "lint:prettier": "prettier '**/*.{js,css,md}' --check"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -15,15 +16,18 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^11.1.2",
     "@types/react": "17.0.29",
-    "eslint": "8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "7",
     "eslint-config-next": "11.1.2",
     "prettier": "^2.4.1",
     "typescript": "4.4.3"
