--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
+    "classnames": "^2.3.1",
     "next": "^11.1.2",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.1"
