--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "classnames": "^2.3.1",
+    "mongoose": "^6.0.12",
     "next": "^12.0.3",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-vertical-timeline-component": "^3.5.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.3",
