--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.5",
-    "@mui/material": "^5.0.4",
-    "@mui/styled-engine-sc": "^5.0.3",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
     "classnames": "^2.3.1",
-    "next": "^11.1.2",
+    "next": "^12.0.3",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
@@ -25,14 +25,13 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^11.1.2",
-    "@types/react": "17.0.29",
+    "@next/eslint-plugin-next": "^12.0.3",
     "@types/react-vertical-timeline-component": "^3.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "^12.0.3",
     "prettier": "^2.4.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.4"
   }
 }
