--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@types/styled-components": "^5.1.15",
     "classnames": "^2.3.1",
     "mongoose": "^6.0.12",
     "next": "^12.0.3",
@@ -24,7 +25,8 @@
     "react-dom": "17.0.2",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.1",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.3",
