--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "*.d.ts",
+    "*.d.ts", "models/leaderboardSchema.tsx", "models/leaderboardSchema.ts", "pages/api/leaderboardAPI/leaderboardAPI.tsx",
   ],
   "exclude": [
     "node_modules"
