--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@types/canvas-confetti": "^1.4.2",
     "@types/styled-components": "^5.1.15",
+    "canvas-confetti": "^1.4.0",
     "classnames": "^2.3.1",
     "mongoose": "^6.0.12",
     "next": "^12.0.3",
