--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/styled-components": "^5.1.15",
     "canvas-confetti": "^1.4.0",
     "classnames": "^2.3.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "next": "^12.0.3",
     "react": "17.0.2",
@@ -28,6 +29,7 @@
     "react-markdown": "^7.1.2",
     "react-vertical-timeline-component": "^3.5.2",
     "remark-gfm": "^3.0.1",
+    "sanitize-html": "^2.7.0",
     "styled-components": "^5.3.1",
     "swr": "^1.0.1",
     "webfontloader": "^1.6.28"
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.3",
     "@types/react-vertical-timeline-component": "^3.3.1",
+    "@types/sanitize-html": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "<8.0.0",
